--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "restful-filter",
   "version": "1.1.3",
-  "description":
-    "Simple library to parse restful filter based on http querystring",
+  "description": "Simple library to parse restful filter based on http querystring",
   "main": "src/index.js",
   "scripts": {
     "test": "NODE_ENV=test mocha --timeout 15000 --recursive --slow 1 tests/"
   },
-  "keywords": ["restful", "querystring", "filter", "api", "search"],
+  "keywords": [
+    "restful",
+    "querystring",
+    "filter",
+    "api",
+    "search"
+  ],
   "author": "Aditya Kresna Permana",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^17.0.8",
     "chai": "^4.1.2",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "lodash": "^4.17.4"
