--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "author": "Aditya Kresna Permana",
   "license": "MIT",
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.8",
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
