--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "restful-filter",
-  "version": "1.1.3",
+  "name": "restful-filter-ts",
+  "version": "2.0.1",
   "description": "Simple library to parse restful filter based on http querystring",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "NODE_ENV=test mocha --timeout 15000 --recursive --slow 1 tests/"
+    "test": "NODE_ENV=test mocha --timeout 15000 --recursive --slow 1 tests/",
+    "prepublish": "tsc"
   },
   "keywords": [
     "restful",
@@ -19,12 +21,12 @@
   "devDependencies": {
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.8",
-    "chai": "^4.1.2",
-    "mocha": "^4.0.1",
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.21"
   }
 }
