--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "2.0.1",
   "description": "Simple library to parse restful filter based on http querystring",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "types.d.ts",
   "scripts": {
+    "bundle": "dts-bundle-generator -o ./types.d.ts ./src/index.ts",
     "test": "NODE_ENV=test mocha --timeout 15000 --recursive --slow 1 tests/",
-    "prepublish": "tsc"
+    "prepublish": "tsc && npm run bundle",
+    "local": "npm pack && npm link"
   },
   "keywords": [
     "restful",
@@ -22,6 +24,7 @@
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.8",
     "chai": "^4.3.4",
+    "dts-bundle-generator": "^6.4.0",
     "mocha": "^9.1.3",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
